--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   },
   "homepage": "https://github.com/Jbar91/week2#readme",
   "devDependencies": {
+    "eslint": "^8.32.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-config-xo": "^0.43.1",
     "husky": "^8.0.0"
   }
 }
