--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 0",
+    "test": "jest",
     "prepare": "husky install"
   },
   "repository": {
@@ -25,6 +25,7 @@
     "eslint": "^8.32.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-config-xo": "^0.43.1",
-    "husky": "^8.0.0"
+    "husky": "^8.0.0",
+    "jest": "^29.4.0"
   }
 }
